; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_input.c_vlc_player_input_Start.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_input.c_vlc_player_input_Start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_input = type { i32, i32 }

@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_player_input_Start(%struct.vlc_player_input* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vlc_player_input*, align 8
  %4 = alloca i32, align 4
  store %struct.vlc_player_input* %0, %struct.vlc_player_input** %3, align 8
  %5 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @input_Start(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @VLC_SUCCESS, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* %2, align 4
  br label %18

14:                                               ; preds = %1
  %15 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %16 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %15, i32 0, i32 0
  store i32 1, i32* %16, align 4
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @input_Start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
